Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
gst-plugins-base
gst-plugins-base
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 635
    • Issues 635
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 106
    • Merge Requests 106
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI/CD
    • Repository
    • Value Stream
  • Snippets
    • Snippets
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-plugins-basegst-plugins-base
  • Issues
  • #794

Closed
Open
Created Jul 22, 2020 by Nirbheek Chauhan@nirbheek🐜Maintainer

check.gst-plugins-base.elements_glmixer.test_glvideomixer_display_replace: Failed

check.gst-plugins-base.elements_glmixer.test_glvideomixer_display_replace

Command

GST_REGISTRY='/builds/dabrain34/gst-build/gst-build/build/registry.dat' CK_DEFAULT_TIMEOUT='20' GST_CHECKS='test_glvideomixer_display_replace' GST_TAG_LICENSE_TRANSLATIONS_DICT='/builds/dabrain34/gst-build/gst-build/subprojects/gst-plugins-base/gst-libs/gst/tag/license-translations.dict' GST_PLUGIN_SYSTEM_PATH_1_0='' CK_TIMEOUT_MULTIPLIER='2.0' GST_STATE_IGNORE_ELEMENTS='cdio cdparanoiasrc libvisual_ alsasrc alsasink' GST_PLUGIN_SCANNER_1_0='/builds/dabrain34/gst-build/gst-build/build/subprojects/gstreamer/libs/gst/helpers/gst-plugin-scanner'  GST_PLUGIN_LOADING_WHITELIST='gstreamer:gst-plugins-base@/builds/dabrain34/gst-build/gst-build/build' /builds/dabrain34/gst-build/gst-build/build/subprojects/gst-plugins-base/tests/check/elements_glmixer

elements_glmixer output

Running suite(s): glmixer
error: XDG_RUNTIME_DIR not set in the environment.
error: XDG_RUNTIME_DIR not set in the environment.
Unexpected critical/warning: gst_caps_intersect_full: assertion 'GST_IS_CAPS (caps2)' failed
Stack trace:
gst_debug_get_stack_trace (gstinfo.c:3074)
gst_check_log_critical_func (gstcheck.c:281)
g_logv (gmessages.c:1350)
g_log (gmessages.c:1413)
gst_caps_intersect_full (gstcaps.c:1758)
gst_harness_sink_query (gstharness.c:392)
gst_pad_query (gstpad.c:4144)
gst_pad_peer_query (gstpad.c:4276)
query_caps_func (gstutils.c:2810)
gst_pad_forward (gstpad.c:3074)
gst_pad_proxy_query_caps (gstutils.c:2860)
gst_pad_query_default (gstpad.c:3259)
gst_pad_query (gstpad.c:4144)
gst_pad_peer_query (gstpad.c:4276)
gst_pad_peer_query_caps (gstutils.c:3152)
gst_base_transform_default_query (gstbasetransform.c:681)
gst_pad_query (gstpad.c:4144)
gst_pad_query_caps (gstutils.c:3106)
gst_base_transform_setcaps (gstbasetransform.c:1126)
gst_base_transform_sink_eventfunc (gstbasetransform.c:1940)
gst_pad_send_event_unchecked (gstpad.c:5845)
gst_pad_push_event_unchecked (gstpad.c:5488)
push_sticky (gstpad.c:3999)
events_foreach (gstpad.c:608)
gst_pad_push_event (gstpad.c:4058)
gst_aggregator_set_src_caps (gstaggregator.c:549)
gst_aggregator_default_negotiate (gstaggregator.c:1179)
gst_aggregator_aggregate_func (gstaggregator.c:1203)
gst_task_func (gsttask.c:328)
g_thread_pool_thread_proxy (gthreadpool.c:308)
g_thread_proxy (gthread.c:805)
start_thread (pthread_create.c:479)
__clone (clone.S:93)
0%: Checks: 1, Failures: 1, Errors: 0
../subprojects/gstreamer/libs/gst/check/gstcheck.c:286:F:general:test_glvideomixer_display_replace:0: Unexpected critical/warning: gst_caps_intersect_full: assertion 'GST_IS_CAPS (caps2)' failed
Check suite glmixer ran in 0.414s (tests failed: 1)

You can mark the issues as 'known' by adding the following lines to the list of known issues

    "FIXME 'check.gst-plugins-base.elements_glmixer.test_glvideomixer_display_replace' issues [REPORT A BUG in https://gitlab.freedesktop.org/gstreamer/ or use a proper bug description]": {
        "tests": [
            "check.gst-plugins-base.elements_glmixer.test_glvideomixer_display_replace"
        ],
        "issues": [
            {
                'returncode': 1,
                'sometimes': True,
            },
        ],
    },

Duration: 1.070514440536499

https://gitlab.freedesktop.org/dabrain34/gst-build/-/jobs/3741069 ==> check.gst-plugins-base.elements_glmixer.test_glvideomixer_display_replace: Failed 'Application returned 1'

Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None